tests/fail/fail_molda_print_record.kr
molda Pessoa {
    textu nomi;
    nter idadi;
}

fn inisiu() {
    Pessoa pessoa = Pessoa::{nomi: "jose", idadi: 60};
    mostra(pessoa);
}
